# matplotlib-cpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.matplotlib  Makefile  Quick Sorting  README  README.md  WinBuild.cmd  datetime_utils.h  matplotlibcpp.h  numpy_flags.py
Win/: CMakeLists.txt  README.md  WinBuild.cmd
cmake/: matplotlib_cppConfig.cmake.in
contrib/: CMakeLists.txt  Dockerfile  Makefile  README.md  WinBuild.cmd
contrib/unittests_catch2/: CMakeLists.txt  README.md  tu_main.cpp  tu_matplotlibcpp.cpp
doc/: STYLE.md
examples/: .gitignore  Makefile  animation  animation.cpp  bar.cpp  basic  basic.cpp  colorbar.cpp  contour.cpp  contourf.cpp  eigen_objects.cpp  fill.cpp  fill_inbetween.cpp  imshow.cpp  lines3d.cpp  minimal  minimal.cpp  modern  modern.cpp  nonblock  nonblock.cpp  polar.cpp  quiver.cpp  ranges.cpp  span.cpp  spy.cpp  stl_containers.cpp  subplot.cpp  subplot2grid.cpp  surface.cpp  timeseries.cpp  update.cpp  variadic_examples.cpp  xkcd  xkcd.cpp
